--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
+    <footer>© Tashin Parvez 2021, All Rights Reserved.</footer>
 </body>
 </html>
